# mejiro

./: .gitignore  01_lens_list_from_skypy.py  02_add_subhalos.py  03_build_models.py  04_pandeia.py  CITATION.cff  F062_1_2044_2044_1_41.npy  F087_1_2044_2044_1_41.npy  F106_1_2044_2044_1_41.npy  F129_1_2044_2044_1_41.npy  F146_1_2044_2044_1_41.npy  F158_1_2044_2044_1_41.npy  F184_1_2044_2044_1_41.npy  F213_1_2044_2044_1_41.npy  README.md  backup.yml  config.yaml  detector.npy  detector_1.npy  detector_7.npy  dev.yml  engine_input_api_3.0.rst  engine_output_api_3.0.rst  env_backup.yml  environment.yml  environment_v3.yml  execute_pipeline.sh  execute_updated_pipeline.sh  flat_field_test.ipynb  generate.py  generate_pandeia_images.py  generate_sample_lenses.py  generate_skypy_images.py  generate_test_lens.py  gs_env.yml  hlwas_simulation.ipynb  hwo_lens_population.csv  lenstronomy_model_lens.ipynb  mejiro.yml  modeling_pipeline.py  (+30 more)
.github/workflows/: python-app.yml
archive/WUPRS/: modeling_in_lenstronomy.ipynb  pipeline.ipynb  simulation_pipeline.ipynb  wuprs_plots.ipynb
arrays/: model.npy  model_1.npy  model_3.npy  model_7.npy  roman.npy
arrays/SLACS/: J9EM0SEEQ_hst_counts_1.npy  J9EM0SEEQ_pandeia_1.npy  J9EM25AFQ_hst_counts_1.npy  J9EM25AFQ_hst_counts_3.npy  J9EM25AFQ_lenstronomy_roman_3.npy  J9EM25AFQ_model_1.npy  J9EM25AFQ_model_3.npy  J9EM25AFQ_pandeia_1.npy  J9EM25AFQ_pandeia_3.npy  J9OP02010_hst_counts_1.npy  J9OP02010_hst_counts_3.npy  J9OP02010_lenstronomy_roman_1.npy  J9OP02010_model_1.npy  J9OP02010_pandeia_1.npy  J9OP02010_pandeia_3.npy  J9OP04010_hst_counts_1.npy  J9OP04010_hst_counts_3.npy  J9OP04010_model_3.npy  J9OP04010_pandeia_1.npy  J9OP04010_pandeia_3.npy  J9OP05010_hst_counts_1.npy  J9OP05010_hst_counts_3.npy  J9OP05010_pandeia_1.npy  J9OP06010_hst_counts_1.npy  J9OP06010_pandeia_1.npy
arrays/cnn_training/: 0.npy  1.npy  10.npy  11.npy  12.npy  13.npy  14.npy  15.npy  16.npy  17.npy  18.npy  19.npy  2.npy  20.npy  21.npy  22.npy  23.npy  24.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy  (+4 more)
clients/: astroquery_client.py  mast_client.py  sdss_client.py
config/: config.yaml  config.yml  config_dev.yaml  config_hltds_deep.yaml  config_hltds_wide.yaml  config_hlwas_coadd.yaml  config_test.yaml  cutout-config.json  dataset-naming-convention-config.json  hpc-config.json  hwo_config.yaml
data/: table4.fit
dev/: _jax_benchmark_worker.py  _scratch.ipynb  _template.ipynb  compare_oversample_supersample.ipynb  dev.py  effect_of_substructure.ipynb  hwo_pieces.ipynb  jaxtronomy_pipeline_walkthrough.ipynb  kappa.ipynb  lens_subtraction.ipynb  overplot_subhalos.ipynb  photometry.ipynb  poppy.ipynb  pyhalo_r_min_issue.ipynb  roman_exposure_test.ipynb  romanisim_l3_mosaic_pipeline_review.md  romanisim_test.ipynb  stpsf.ipynb  strong_lens.ipynb  synthetic_image_simapi.ipynb  use_jax.ipynb
docs/: README.md  l3_cutout_orientation.md  requirements.txt
env/: environment.yml  requirements.txt
envs/: lenstronomy.yml  stips.yml
examples/: 01_pipeline_walkthrough.ipynb  02_generate_color_image.ipynb  02_hlwas_simulation.ipynb  03_psf_field_dependence copy.ipynb  03_psf_field_dependence.ipynb  access_subhalos.ipynb  effect_of_substructure.ipynb  execute_pipeline.sh  hwo.ipynb  hwo.yml  pandeia_off.npy  pandeia_on.npy  pipeline_walkthrough.ipynb  read_dataset.ipynb  roman_configuration.ipynb  run_mejiro_pipeline.ipynb  run_mejiro_pipeline.py  supersampling_test.ipynb  synthetic_image.ipynb  use_jax.ipynb  view_dataset.ipynb  view_fits_export.html  view_fits_export.ipynb
helpers/: cutout_helper.py
hwo/: config.yaml
mejiro/: __init__.py  aas.mplstyle  exp.py  exposure.py  galaxy_galaxy.py  lensed_supernova.py  mejiro.mplstyle  point_wfi.py  strong_lens.py  strong_lens_base.py  style.py  synth.py  synthetic_image.py
models/: dataset.py
notebooks/: Pandeia-Roman_GUI.ipynb  WUCAP_plots.ipynb  WebbPSF-Roman_Tutorial.ipynb  brightness_test.ipynb  check_roman_observability.ipynb  compare.ipynb  compare_sim_images.ipynb  crop_edges.ipynb  get_sample_lenses.ipynb  ingest_skypy_results.ipynb  jwst_nircam_psfs.ipynb  lenstronomy_model_lens.ipynb  ma_table_exposure_times.ipynb  macromodel_fitting.ipynb  modeling_COSMOS_lens.ipynb  optimize_num_sample_params.ipynb  overplot_caustics.ipynb  pandeia_input.ipynb  pandeia_noise_residuals.ipynb  pandeia_output.ipynb  pandeia_sim_no_noise_or_background.ipynb  phonion_sampling.ipynb  phonions.ipynb  pipeline.ipynb  pixel_density_test copy.ipynb  plot_test_lenses.ipynb  power_spectrum.ipynb  pyhalo.ipynb  pyhalo_issue.ipynb  readme_figure.ipynb  residual.ipynb  residuals.ipynb  residuals_scratch.ipynb  romanisim_pipeline.ipynb  romanisim_pipeline.py  scenes_across_detectors.ipynb  simulate_telescopes.ipynb  single_source_mosaic.ipynb  single_source_mosaic_sub4.ipynb  single_subhalo_realization.ipynb  (+24 more)
paper/: lens_params.csv  table_for_paper.csv
projects/: README.md  cache_psfs.py
psfs/: PSFSTD_WFC3UV_F814W.fits
pyhalo/: README.md  nfw_core_truncated.py
scripts/: generate_sample_lenses.py  generate_skypy_images.py  multiprocessing_skypy_output.py  no_noise_or_background.py  no_substructure_sample.py  power_spectrum_fig_data.py  test_grid_oversampling.py  test_lenstronomy_noise.py  test_number_samples.py  test_randomized_pandeia_noise.py  vary_psfs.py
setup/: README.md  data_util.py
sim/: hubble.py  lsst.py  roman.py
test/: test_defaults.yaml  test_gs.py  test_strong_lens.py  test_subhalos.py
tests/: conftest.py  installations.py  test_exp.py  test_exposure.py  test_flux.py  test_galaxy_galaxy.py  test_hwo_bands.py  test_hwo_imaging.py  test_lens_subtraction.py  test_lensed_supernova.py  test_lightweight_realization.py  test_point_wfi.py  test_pyhalo.py  test_roman.py  test_roman_bands.py  test_roman_imaging.py  test_strong_lens.py  test_subhalos.py  test_synth.py  test_synthetic_image.py
tutorial_notebooks/: Getting Started.ipynb  Pandeia-Roman.ipynb  Pandeia-Roman_GUI.ipynb  mono_psf_1.2um.fits
utils/: csv_utils.py  fits_plot.py  fits_utils.py  image_utils.py  json_utils.py  psf_utils.py  utils.py
(+1784 files in other folders)
