[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mejiro"
description = "Pipeline to simulate diffraction-limited telescope images of strong gravitational lenses"
dynamic = ["version"]
authors = [
    { name = "Bryce Wedig", email = "b.t.wedig@wustl.edu" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "astropy==7.2.0",
    "galsim==2.7.2",
    "numpy<2.4.0",  # including this for now because pyhalo==1.4.3 uses np.trapz which is removed in 2.4.0
    "pandas==2.3.3",
    "tqdm==4.67.1",
    "lenstronomy==1.13.3",
    "pyhalo==1.4.3",
    "mcfit==0.0.22",  # required for pyhalo
    "slsim==0.1.1",
    "sncosmo==2.12.1",  # required for slsim
    "speclite @ git+https://github.com/bryce-wedig/speclite.git@mejiro-v2.0.0",  # required for slsim
    "skypy @ git+https://github.com/bryce-wedig/skypy.git@mejiro-v2.0.0",  # required for slsim
    "colossus==1.3.10",  # required for slsim
    "corner==2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-forked",
    "jupyter",
    "sphinx",
    "sphinx-rtd-theme",
]
jax = [
    "jax[cuda12]",
    "jaxtronomy",
]
roman = [
    "stpsf==2.1.0",
    "romanisim==0.13.0",
    "romancal==0.22.0"
]
hwo = [
    "syotools==1.3.0"
]
all = [
    "mejiro[dev,jax,roman,hwo]"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mejiro*"]

[tool.setuptools.dynamic]
version = {attr = "mejiro.__version__"}

[project.urls]
Documentation = "https://mejiro.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/AstroMusers/mejiro"
Issues = "https://github.com/AstroMusers/mejiro/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "."
]
